force-app/main/default/objects/IBM_Customers__x/IBM_Customers__x.object-meta.xml
<CustomObject>
    <description>IBM_Customers</description>
    <externalDataSource>ExternalDataSource1</externalDataSource>
    <externalName>IBM_Customers</externalName>
    <label>IBM_Customers</label>
    <pluralLabel>IBM_Customers</pluralLabel>
</CustomObject>