force-app/main/default/objects/IBM_Customers__x/fields/BusinessSector__c.field-meta.xml
<CustomField>
    <fullName>BusinessSector__c</fullName>
    <description>BusinessSector</description>
    <externalDeveloperName>BusinessSector</externalDeveloperName>
    <label>BusinessSector</label>
    <length>128</length>
    <type>Text</type>
</CustomField>