force-app/main/default/objects/IBM_Customers__x/fields/ManagingCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ManagingCustomerNumber__c</fullName>
    <description>ManagingCustomerNumber</description>
    <externalDeveloperName>ManagingCustomerNumber</externalDeveloperName>
    <label>ManagingCustomerNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>