force-app/main/default/objects/IBM_Customers__x/fields/Slice__c.field-meta.xml
<CustomField>
    <fullName>Slice__c</fullName>
    <description>Slice</description>
    <externalDeveloperName>Slice</externalDeveloperName>
    <label>Slice</label>
    <length>128</length>
    <type>Text</type>
</CustomField>