force-app/main/default/objects/IBM_Customers__x/fields/TargetSector__c.field-meta.xml
<CustomField>
    <fullName>TargetSector__c</fullName>
    <description>TargetSector</description>
    <externalDeveloperName>TargetSector</externalDeveloperName>
    <label>TargetSector</label>
    <length>128</length>
    <type>Text</type>
</CustomField>